<resources>
    <string name="app_name">Ambi Planner</string>

    <string name="setup_stage">%s setup stage in %s</string>
    <string name="exception_null_app_container_fragment">Application container fragment can\'t be null in current stage</string>
    <string name="unexpected_server_error">Unexpected server error</string>
    <string name="unexpected_network_error">Unexpected network error</string>
    <string name="unable_to_communicate_to_server">Unable to communicate to server</string>
    <string name="no_internet_connection">No internet connection</string>

    <string name="home_fragment">Home Fragment</string>
    <string name="daily_routine">Daily Routine</string>
    <string name="add_routine">Add Routine</string>
    <string name="edit">Edit</string>
    <string name="start_time">Start Time</string>
    <string name="time_to_complete">Time To Complete</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="routines_list_is_empty">Routines list is empty.</string>
    <string name="total_time_today">%1$dh %2$dm Today Total</string>
    <string name="finished_days_0">Finished days: 0</string>
    <string name="mixed_days_0">Mixed days: 0</string>
    <string name="skipped_days_0">Skipped Days: 0</string>
    <string name="done">Done</string>
    <string name="start_at">Start at %s</string>
    <string name="notify">Notify</string>
</resources>