<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextClassic14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Add/Edit Routine"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="Title"
        app:counterEnabled="true"
        app:counterMaxLength="64"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/secondary_a60" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="Description"
        app:counterEnabled="true"
        app:counterMaxLength="350"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilTitle"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="@color/secondary_a60" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbEnableTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:buttonTint="@color/black"
        android:text="@string/start_time"
        app:layout_constraintStart_toStartOf="@+id/tilDescription"
        app:layout_constraintTop_toBottomOf="@+id/tilDescription"
        tools:checked="true" />

    <TextView
        android:id="@+id/tvStartTime"
        style="@style/TextClassic14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbEnableTime"
        app:layout_constraintEnd_toEndOf="@+id/tilDescription"
        app:layout_constraintTop_toTopOf="@+id/cbEnableTime"
        tools:text="12:30" />

    <CheckBox
        android:id="@+id/cbEstimateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/black"
        android:text="@string/time_to_complete"
        app:layout_constraintStart_toStartOf="@+id/tilDescription"
        app:layout_constraintTop_toBottomOf="@+id/cbEnableTime"
        tools:checked="true" />

    <TextView
        android:id="@+id/tvEstimateTime"
        style="@style/TextClassic14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/cbEstimateTime"
        app:layout_constraintEnd_toEndOf="@+id/tilDescription"
        app:layout_constraintTop_toTopOf="@+id/cbEstimateTime"
        tools:text="1h 20m" />

    <Button
        android:id="@+id/btnSave"
        style="@style/TextClassic14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondary_a60"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>